# graphics-course-slides

./: annotation.md  makefile  plan.md
2021/: makefile
2021/source/exam/: source.tex
2021/source/homework-final/: source.tex
2021/source/homework2/: source.tex
2021/source/lecture12/: source.tex
2022/: makefile
code/: readme.md
code/practice1/: CMakeLists.txt  main.cpp
code/practice1/cmake/modules/: FindSDL2.cmake
slides/: makefile
source/final-project/: source.tex
source/gamedev-math/: source.tex
source/homework1/: source.tex
source/homework2/: source.tex
source/homework3/: source.tex
source/lecture1/: source.tex
source/lecture10/: source.tex
source/lecture11/: source.tex
source/lecture12/: source.tex
source/lecture13/: source.tex
source/lecture14/: source.tex
source/lecture15/: source.tex
source/lecture2/: source.tex
source/lecture3/: source.tex
source/lecture4/: source.tex
source/lecture5/: source.tex
source/lecture6/: source.tex
source/lecture7/: source.tex
source/lecture8/: source.tex
source/lecture9/: source.tex
source/practice1/: source.tex
source/practice10/: source.tex
source/practice11/: source.tex
source/practice12/: source.tex
source/practice13/: source.tex
source/practice14/: source.tex
source/practice15/: source.tex
source/practice2/: source.tex
source/practice3/: source.tex
source/practice4/: source.tex
source/practice5/: source.tex
source/practice6/: source.tex
source/practice7/: source.tex
source/practice8/: source.tex
source/practice9/: source.tex
(+69 files in other folders)
